--- a/components/orderCard/orderCard.wxml
+++ b/components/orderCard/orderCard.wxml
@@ -1,11 +1,15 @@
 <!--components/orderCard.wxml-->
 <!-- wx:if="{{detailInfo.bigThan30}}" -->
-<view id="orderCard" wx:if="{{smallThan24h}}" bindtap="changeCheck" class="ml10 mr10 mt20 bgColorWhite jcsb flexWarp borderRadius16 borderBox pt10 pb10 colorBlack por overfh {{isBig?'':'vw98 shadow pl10 pr10'}}">
+<view id="orderCard" wx:if="{{smallThan24h}}" bindtap="changeCheck"
+	class="ml10 mr10 mt20 bgColorWhite jcsb flexWarp borderRadius16 borderBox pt10 pb10 colorBlack por overfh {{isBig?'':'vw98 shadow pl10 pr10'}}">
 	<view class="flex jcsb aic">
 		<view class="fz35 flex blod aic" bind:click="someFunction" catchtap="changeShow">
-			<view class="overfh vw53" style="text-overflow:ellipsis;white-space: nowrap;" wx:if="{{detailInfo.display === 0}}">{{detailInfo.title || detailInfo.code}}</view>
-			<view class="overfh vw53" style="text-overflow:ellipsis;white-space: nowrap;" wx:elif="{{detailInfo.display === 1}}">{{detailInfo.code || detailInfo.title}}</view>
-			<view class="overfh vw53" style="text-overflow:ellipsis;white-space: nowrap;" wx:else>{{detailInfo.title || detailInfo.code}}</view>
+			<view class="overfh vw53" style="text-overflow:ellipsis;white-space: nowrap;"
+				wx:if="{{detailInfo.display === 0}}">{{detailInfo.title || detailInfo.code}}</view>
+			<view class="overfh vw53" style="text-overflow:ellipsis;white-space: nowrap;"
+				wx:elif="{{detailInfo.display === 1}}">{{detailInfo.code || detailInfo.title}}</view>
+			<view class="overfh vw53" style="text-overflow:ellipsis;white-space: nowrap;" wx:else>
+				{{detailInfo.title || detailInfo.code}}</view>
 			<van-icon wx:if="{{showChangeIcon}}" class="ml10 color8D9F" name=exchange" size="18px"> </van-icon>
 		</view>
 		<view class="flex h90">
@@ -16,10 +20,12 @@
 		<text>{{detailInfo.customer}}</text>
 		<view class="flex aic">
 			<view class="flex aic">
-				<view class="colorFDA9 borderColorFDA9 boderSolid1 borderRadius10 pt5 pb5 pl5 pr5" wx:if="{{detailInfo.order_type === 1}}">
+				<view class="colorFDA9 borderColorFDA9 boderSolid1 borderRadius10 pt5 pb5 pl5 pr5"
+					wx:if="{{detailInfo.order_type === 1}}">
 					订
 				</view>
-				<view class="color27A2 borderColor27A2 boderSolid1 borderRadius10 pt5 pb5 pl5 pr5" wx:if="{{detailInfo.order_type === 2}}">
+				<view class="color27A2 borderColor27A2 boderSolid1 borderRadius10 pt5 pb5 pl5 pr5"
+					wx:if="{{detailInfo.order_type === 2}}">
 					样
 				</view>
 			</view>
@@ -29,30 +35,54 @@
 		<image class="size-l radius-m image" catchtap="showImage" src="{{detailInfo.imgSrc}}" mode="aspectFill" />
 		<view class="por ml10 fz30 flex jcsa fdc w100" style="height: 144rpx;">
 			<view class="flex w100">
-				<view wx:if="{{!detailInfo.productLen}}" class="{{(showEnterPrice && (enterPricce !== '0.00'))?'w70':'w100'}}">生产进度：{{detailInfo.allNumber}}({{detailInfo.nowNumber-detailInfo.allNumber<0?(detailInfo.nowNumber-detailInfo.allNumber):((detailInfo.nowNumber-detailInfo.allNumber)===0?0:'+'+(detailInfo.nowNumber-detailInfo.allNumber))}}) </view>
-				<view wx:if="{{detailInfo.productLen}}">产品种类：{{detailInfo.productLen}}</view>
+				<view wx:if="{{!detailInfo.productLen && !detailInfo.quoteCode}}"
+					class="{{(showEnterPrice && (enterPricce !== '0.00'))?'w70':'w100'}}">
+					生产进度：{{detailInfo.allNumber}}({{detailInfo.nowNumber-detailInfo.allNumber<0?(detailInfo.nowNumber-detailInfo.allNumber):((detailInfo.nowNumber-detailInfo.allNumber)===0?0:'+'+(detailInfo.nowNumber-detailInfo.allNumber))}})
+				</view>
+				<view class="w100" wx:if="{{detailInfo.productLen}}">产品种类：{{detailInfo.productLen}}</view>
+				<view class="flex jcsb w100">
+					<view wx:if="{{detailInfo.quoteCode}}">{{detailInfo.quoteCode}}</view>
+					<view wx:if="{{detailInfo.user}}">{{detailInfo.user}}</view>
+				</view>
 				<view class="w30 tc" wx:if="{{showEnterPrice && (enterPricce !== '0.00')}}">{{enterPricce}} 元</view>
-				<view class="w30 tc colorRed" wx:if="{{showEnterPrice && isLeader && (enterPricce === '0.00')}}" bindtap="toOrderDetail">点击定价</view>
+				<view class="w30 tc colorRed" wx:if="{{showEnterPrice && isLeader && (enterPricce === '0.00')}}"
+					bindtap="toOrderDetail">点击定价</view>
 			</view>
-			<view>交付时间：{{detailInfo.time}}</view>
+			<view wx:if="{{detailInfo.time}}">交付时间：{{detailInfo.time}}</view>
 			<view wx:if="{{showPrice}}" class="poa fz30 color27A2" style="right:0;bottom:24%">￥{{detailInfo.price}}</view>
-			<view wx:if="{{detailInfo.productLen && !notShowProLen}}" class="poa fz30" style="right:0;bottom:11%">{{detailInfo.allNumber}}({{detailInfo.nowNumber-detailInfo.allNumber<0?(detailInfo.nowNumber-detailInfo.allNumber):((detailInfo.nowNumber-detailInfo.allNumber)===0?0:'+'+(detailInfo.nowNumber-detailInfo.allNumber))}})</view>
+			<view class="flex jcsb">
+				<view wx:if="{{detailInfo.date}}">{{detailInfo.date}}</view>
+				<view wx:if="{{detailInfo.systemPrice}}">系统报价：{{detailInfo.systemPrice}}{{detailInfo.unit}}</view>
+			</view>
+			<view wx:if="{{detailInfo.productLen && !notShowProLen}}" class="poa fz30" style="right:0;bottom:25%">
+				{{detailInfo.allNumber}}({{detailInfo.nowNumber-detailInfo.allNumber<0?(detailInfo.nowNumber-detailInfo.allNumber):((detailInfo.nowNumber-detailInfo.allNumber)===0?0:'+'+(detailInfo.nowNumber-detailInfo.allNumber))}})
+			</view>
 		</view>
-		<van-icon name="checked" size="16px" class="{{detailInfo.isBind?'check':'color9E'}} poa" style="right: 20rpx;bottom: 20rpx;" wx:if="{{showIcon}}"></van-icon>
-		<view wx:if="{{detailInfo.status === 1}}" class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">待定价</view>
-		<view wx:if="{{detailInfo.status === 2}}" class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">生产中</view>
-		<view wx:if="{{detailInfo.status === 3}}" class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">已完成</view>
-		<view wx:if="{{detailInfo.status === 4}}" class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">新派单</view>
-		<view wx:if="{{detailInfo.status === 5}}" class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">待验收</view>
-		<view wx:if="{{detailInfo.status === 6}}" class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">已验收</view>
-		<view wx:if="{{detailInfo.status === 7}}" class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">未审核</view>
-		<view wx:if="{{detailInfo.status === 8}}" class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">已通过</view>
+		<van-icon name="checked" size="16px" class="{{detailInfo.isBind?'check':'color9E'}} poa"
+			style="right: 20rpx;bottom: 20rpx;" wx:if="{{showIcon}}"></van-icon>
+		<view wx:if="{{detailInfo.status === 1}}"
+			class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">待定价</view>
+		<view wx:if="{{detailInfo.status === 2}}"
+			class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">生产中</view>
+		<view wx:if="{{detailInfo.status === 3}}"
+			class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">已完成</view>
+		<view wx:if="{{detailInfo.status === 4}}"
+			class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">新派单</view>
+		<view wx:if="{{detailInfo.status === 5}}"
+			class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">待验收</view>
+		<view wx:if="{{detailInfo.status === 6}}"
+			class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">已验收</view>
+		<view wx:if="{{detailInfo.status === 7}}"
+			class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">未审核</view>
+		<view wx:if="{{detailInfo.status === 8}}"
+			class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">已通过</view>
 	</view>
 	<!-- 弹出框 -->
 	<van-popup catchtap show="{{showPopup}}" bindtap="closePopup">
 		<view class="overfh por">
 			<view class="tc vw100 h100">
-				<image mode="widthFix" show-menu-by-longpress="{{true}}" src="{{detailInfo.imgSrc}}" style="display:block"></image>
+				<image mode="widthFix" show-menu-by-longpress="{{true}}" src="{{detailInfo.imgSrc}}" style="display:block">
+				</image>
 			</view>
 		</view>
 	</van-popup>
