--- a/pages/ourFactory/ourFactory.wxml
+++ b/pages/ourFactory/ourFactory.wxml
@@ -1,30 +1,35 @@
 <!--pages/ourFactory/ourFactory.wxml-->
 <view id="ourFactory">
 	<nav-content showBack="{{false}}">
-		<view slot="after">
+		<view slot="after" class="fz25">
 			<!-- <van-search value="{{ keyWord }}" placeholder="搜索" bind:change="onSearch" /> -->
-			<view class="poa"
-				style="left:12%;border-right: 1px solid #eaeaea;padding-right:10rpx;height:35px;line-height:35px;overflow: hidden;"
-				bindtap="showChangeSearch">{{searchType===1?'订单':'计划单'}}</view>
-			<input wx:if="{{isLogin}}"
-				style="text-align: left;border:1px solid #eaeaea;padding: 10rpx 0 10rpx 150rpx;border-radius:50rpx;margin:0 0 25rpx 30rpx;width:55%"
-				type="text" bindinput="onSearch" placeholder="搜索" />
-			<input wx:else disabled
-				style="text-align: left;border:1px solid #eaeaea;padding: 10rpx 0 10rpx 150rpx;border-radius:50rpx;margin:0 0 25rpx 30rpx;width:55%"
-				type="text" bindinput="onSearch" placeholder="搜索" />
-			<view class="poa bgColorWhite tl" wx:if="{{showSearch}}"
-				style="left:8%;top:80%;z-index: 999999;border:1px solid #eaeaea;padding: 20rpx 40rpx;">
-				<view bindtap="changeSearchType" data-index="{{1}}">订单</view>
-				<view class="line"></view>
-				<view bindtap="changeSearchType" data-index="{{2}}">计划单</view>
+			<view wx:if="{{type === '2' && isLogin}}">
+				<view class="poa"
+					style="left:12%;border-right: 1px solid #eaeaea;padding-right:10rpx;height:35px;line-height:35px;overflow: hidden;"
+					bindtap="showChangeSearch">{{searchType===1?'订单':'计划单'}}</view>
+				<input wx:if="{{isLogin}}"
+					style="text-align: left;border:1px solid #eaeaea;padding: 10rpx 0 10rpx 115rpx;border-radius:50rpx;margin:0 0 25rpx 30rpx;width:55%"
+					type="text" bindinput="onSearch" placeholder="搜索" />
+				<input wx:else disabled
+					style="text-align: left;border:1px solid #eaeaea;padding: 10rpx 0 10rpx 115rpx;border-radius:50rpx;margin:0 0 25rpx 30rpx;width:55%"
+					type="text" bindinput="onSearch" placeholder="搜索" />
+				<view class="poa bgColorWhite tl" wx:if="{{showSearch}}"
+					style="left:8%;top:80%;z-index: 999999;border:1px solid #eaeaea;padding: 0rpx 10rpx;">
+					<view bindtap="changeSearchType" data-index="{{1}}">订单</view>
+					<view class="line" style="margin: 0;"></view>
+					<view bindtap="changeSearchType" data-index="{{2}}">计划单</view>
+				</view>
+			</view>
+			<view wx:if="{{type === '1' && isLogin}}">
+				本厂生产中
 			</view>
 		</view>
 	</nav-content>
 	<view wx:if="{{type === '2' && isLogin}}">
-		<view class="tc color91 mt10 mb10">共检索到{{orderList.length}}条数据</view>
+		<view class="fz25 tc color91 mt10 mb10">共检索到{{orderList.length}}条数据</view>
 		<t-dropdown-menu>
 			<t-dropdown-item label="工序" optionsLayout="tree" options="{{processList.options}}" value="{{processList.value}}"
-				bindchange="changeProcess" bindconfirm="confirmProcess" />
+				bindchange="chang	eProcess" bindconfirm="confirmProcess" />
 			<t-dropdown-item label="小组" options="{{groupList.options}}" value="{{groupList.value}}"
 				bindchange="changeGroup" />
 			<t-dropdown-item label="创建人" options="{{userList.options}}" value="{{userList.value}}" bindchange="changeUser" />
