--- a/pages/outsourcingAcceptance/outsourcingAcceptance.scss
+++ b/pages/outsourcingAcceptance/outsourcingAcceptance.scss
@@ -1,3 +1,9 @@
-.van-radio{
-	margin-top: 10px;
+#outsourcingAcceptance {
+  .van-radio {
+    margin-top: 10px;
+	}
+	
+	.van-checkbox{
+		margin-top: 10px;
+	}
 }
