--- a/pages/quotedPrice/quotedPrice.wxml
+++ b/pages/quotedPrice/quotedPrice.wxml
@@ -4,30 +4,34 @@
 		<view slot="after">
 			<input wx:if="{{isLogin}}"
 				style="text-align: left;border:1px solid #eaeaea;padding: 10rpx 0 10rpx 20rpx;border-radius:50rpx;margin:0 0 25rpx 30rpx;width:85%"
-				type="text" bindinput="onSearch" placeholder="单据编号/产品编号" />
+				type="text" bindinput="onSearch" placeholder="单据编号" />
 			<input wx:else disabled
 				style="text-align: left;border:1px solid #eaeaea;padding: 10rpx 0 10rpx 20rpx;border-radius:50rpx;margin:0 0 25rpx 30rpx;width:85%"
-				type="text" bindinput="onSearch" placeholder="单据编号/产品编号" />
+				type="text" bindinput="onSearch" placeholder="单据编号" />
 		</view>
 	</nav-content>
-	<t-dropdown-menu>
-		<t-dropdown-item label="品类" options="{{singleSelect.options}}" defaultValue="option_3" />
-		<t-dropdown-item label="公司" options="{{singleSelect.options2}}" defaultValue="option_3" />
-		<t-dropdown-item label="状态" options="{{singleSelect.options3}}" defaultValue="option_3" />
-		<t-dropdown-item label="日期" options="{{singleSelect.options}}" defaultValue="option_3" />
-	</t-dropdown-menu>
 
-	<view class="overfsy vh75">
-		<order-card wx:for="{{orderList}}" notShowProLen data-item="{{item}}" wx:for-item="item" wx:key="item"
-			wx:for-index="index" detailInfo="{{item}}" bindtap="toDetail"></order-card>
-		<order-card wx:for="{{orderList}}" notShowProLen data-item="{{item}}" wx:for-item="item" wx:key="item"
-			wx:for-index="index" detailInfo="{{item}}" bindtap="toDetail"></order-card>
-		<order-card wx:for="{{orderList}}" notShowProLen data-item="{{item}}" wx:for-item="item" wx:key="item"
-			wx:for-index="index" detailInfo="{{item}}" bindtap="toDetail"></order-card>
+	<view class="flex aic">
+		<t-dropdown-menu>
+			<t-dropdown-item label="状态" options="{{statusList.options}}" value="{{statusList.value}}"
+				bindchange="changeStatus" />
+			<t-dropdown-item label="公司" optionsLayout="tree" options="{{clientList.options}}" value="{{clientList.value}}"
+				bindchange="changeClient" bindconfirm="confirmClient" />
+			<t-dropdown-item label="创建人" options="{{userList.options}}" value="{{userList.value}}" bindchange="changeUser" />
+			<!-- <t-dropdown-item label="日期" bindtap="showDatePick" disabled/> -->
+		</t-dropdown-menu>
+		<view class="vw20 tc bgColorWhite flex aic"
+			style="height: 48px;line-height: 48px;border-bottom: 1px solid #e6e6e699;" bindtap="showDatePick">
+			<view style="font-size: 32rpx;">日期</view>
+			<t-icon name='caret-down-small' size="20px"></t-icon>
+		</view>
+	</view>
+
+	<scroll-view scroll-y class="vh75" bindscrolltolower="getList">
 		<order-card wx:for="{{orderList}}" notShowProLen data-item="{{item}}" wx:for-item="item" wx:key="item"
 			wx:for-index="index" detailInfo="{{item}}" bindtap="toDetail"></order-card>
 		<view style="height: 5vh;"></view>
-	</view>
+	</scroll-view>
 
 	<view wx:if="{{!isLogin}}">
 		<view class="mt20 submit">
@@ -46,4 +50,8 @@
 	</view>
 	<van-dialog id="van-dialog" confirm-button-color="#27A2FD" />
 	<l-message content="{{content}}" />
+	<van-popup show="{{ show }}" bind:close="onClose" position="bottom" close-on-click-overlay="{{true}}" round>
+		<van-datetime-picker type="date" value="{{ currentDate }}" min-date="{{ minDate }}" max-date="{{ maxDate }}"
+			bind:input="onInput" bind:confirm="onConfirm" bind:cancel="onCancel"/>
+	</van-popup>
 </view>
